# open-bsp-api

./: .gitignore  CLAUDE.md  README.md
v2/apps/api/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
v2/apps/api/alembic/: env.py
v2/apps/api/alembic/versions/: 001_tenant_rls_baseline.py  002_waba_phone_numbers_rls.py  003_org_profile_audit.py  004_waba_unique_env_index.py  005_console_users_memberships.py  006_api_keys_rls.py  007_console_memberships_grants.py  008_webhook_verify_secrets_rls.py  009_wvs_one_open_invalid_after.py  010_webhook_inbound_events.py  011_resolve_waba_tenant_status.py  012_outbound_whatsapp_messages.py  013_due_outbound_candidates.py  014_whatsapp_message_templates.py  015_inbox_conversations.py  016_inbox_tags.py  017_inbox_handoff.py  018_tenant_flow_drafts.py  019_tenant_flow_sandbox_runs.py  020_tenant_flow_publish_activations.py  021_tenant_flow_publish_versions.py  022_tenant_embed_origins.py  023_tenant_contact_preferences.py  024_contact_prefs_tune.py  025_tenant_sandbox_webhook_deliveries.py  026_tenant_metering_daily.py
v2/apps/api/app/: __init__.py  atdd_fixture_ids.py  ci_seed.py  main.py
v2/apps/api/app/api/routes/: auth_oidc.py  embed_session.py  (+20 more)
v2/apps/api/app/auth/: __init__.py  console_identity.py  oidc_flow.py  session_cookie.py
v2/apps/api/app/contacts/: __init__.py  outbound_prefs.py
v2/apps/api/app/core/: api_key_crypto.py  config.py  errors.py  publication.py
v2/apps/api/app/db/: models.py  models_flows.py  models_inbox.py  models_message_templates.py  models_outbound.py  models_sandbox_webhook_deliveries.py  models_usage.py  models_waba.py  models_webhook_inbound.py  session.py
v2/apps/api/app/embed/: __init__.py  allowlist.py  origins.py
v2/apps/api/app/inbox/: __init__.py  conversation_mode.py  handoff_sync.py  sync.py  tag_sync.py
v2/apps/api/app/services/: __init__.py  channel_health.py  flow_engine.py  flow_sandbox.py  flow_validation.py  usage_metering.py
v2/apps/api/app/tenancy/: __init__.py  context.py  deps.py  rbac.py
v2/apps/api/app/whatsapp/: __init__.py  bsuid.py  identity.py  meta_send.py  outbound_sweep.py  outbound_worker.py  templates_meta.py  webhook_ingress.py  webhook_verify_db.py
v2/apps/api/tests/: conftest.py  test_api_key_crypto.py  test_auth_routes.py  test_auth_session_cookie.py  test_channel_health_signals.py  test_conversation_mode_unit.py  test_embed_origins_normalize.py  test_errors.py  test_flow_engine_env.py  test_flow_sandbox.py  test_flow_validation.py  test_health.py  test_me_channel_health_route.py  test_meta_send.py  test_outbound_prefs.py  test_rbac_story22.py  test_rbac_story23_api_keys.py  test_rbac_story24_webhook_secrets.py  test_story51_flow_validate_http.py  test_story52_sandbox_http.py  test_story53_publish_http.py  test_story54_versions_http.py  test_story55_engine_http.py  test_story61_embed_http.py  test_templates_meta.py  test_whatsapp_bsuid.py  test_whatsapp_webhook_security.py
v2/apps/api/tests/atdd/: README.md  conftest.py  test_epic10_story101_incident_correlation_atdd.py  test_epic10_story102_audit_log_atdd.py  test_epic10_story103_break_glass_atdd.py  test_epic1_story12_tenant_foundation_atdd.py  test_epic1_story13_organization_atdd.py  test_epic1_story14_waba_atdd.py  test_epic2_story21_oauth_oidc_login_atdd.py  test_epic2_story22_matriz_papeis_atdd.py  test_epic2_story23_chaves_api_atdd.py  test_epic2_story24_webhook_secrets_atdd.py  test_epic3_story31_webhook_ingress_atdd.py  test_epic3_story32_send_message_atdd.py  test_epic3_story33_templates_signals_atdd.py  test_epic4_story41_inbox_split_atdd.py  test_epic4_story42_etiquetas_atdd.py  test_epic4_story43_handoff_atdd.py  test_epic4_story44_channel_health_atdd.py  test_epic5_story51_flow_editor_atdd.py  test_epic5_story52_sandbox_atdd.py  test_epic5_story53_publish_atdd.py  test_epic5_story54_versions_audit_atdd.py  test_epic5_story55_engine_atdd.py  test_epic6_story61_embed_session_atdd.py  test_epic6_story62_bot_human_mode_atdd.py  test_epic6_story63_disclosure_preferences_atdd.py  test_epic6_story64_embed_a11y_atdd.py  test_epic7_story71_rest_idempotency_atdd.py  test_epic7_story72_deprecation_policy_atdd.py  test_epic7_story73_sandbox_deliveries_atdd.py  test_epic8_story81_metering_atdd.py  test_epic8_story82_value_report_atdd.py  test_epic8_story83_entitlements_atdd.py  test_epic8_story84_usage_export_atdd.py  test_epic9_story91_legal_basis_atdd.py  test_epic9_story92_dsar_atdd.py  test_epic9_story93_subprocessors_atdd.py  test_epic9_story94_retention_atdd.py  test_epic9_story95_consent_log_atdd.py  (+2 more)
v2/apps/api/tests/integration/: test_organization_audit.py  test_organization_profile_audit.py  test_rls_tenant_isolation.py  test_story21_oidc_callback_session.py  test_story23_api_keys.py  test_story24_webhook_verify.py  test_story31_webhook_ingress_queue.py  test_story32_outbound_send.py  test_story33_message_templates.py  test_story41_inbox.py  test_story42_inbox_tags.py  test_story43_handoff.py  test_story44_channel_health.py  test_story51_flows.py  test_story52_sandbox_run.py  test_story53_flow_publish.py  test_story54_flow_versions.py  test_story55_flow_engine.py  test_story61_embed_session.py  test_story62_conversation_mode.py  test_story63_contact_preferences.py  test_story73_sandbox_webhook_deliveries.py  test_story81_usage_metering.py
v2/apps/api/tests/policy/: test_openapi_gate.py
v2/apps/api/tests/smoke/: test_smoke.py
(+155 files in other folders)
