[project]
name = "openbsp-api"
version = "0.1.0"
description = "Open BSP API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_story52_sandbox_http.py" = ["I001"]
"tests/test_story53_publish_http.py" = ["I001"]
"tests/test_story54_versions_http.py" = ["I001"]
"tests/test_flow_engine_env.py" = ["I001"]
"tests/test_story61_embed_http.py" = ["I001"]
"tests/test_conversation_mode_unit.py" = ["I001"]
"tests/atdd/test_epic6_story61_embed_session_atdd.py" = ["I001"]
"tests/integration/test_story55_flow_engine.py" = ["I001"]
"tests/integration/test_story61_embed_session.py" = ["I001"]
"tests/integration/test_story62_conversation_mode.py" = ["I001"]
"tests/test_outbound_prefs.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: quick checks after deploy (run: pytest -m smoke)",
    "policy: repo quality gates (e.g. OpenAPI); run in full CI",
    "atdd: acceptance / ATDD tests; must pass before merge (red blocks merge)",
    "integration: Postgres + RLS; requires DATABASE_URL (CI docker)",
    "epic1_atdd: Epic 1 ATDD subset (full ATDD green quando epicos 2+ implementados)",
    "epic2_atdd: Epic 2 ATDD subset (incremental CI gate)",
    "epic3_atdd: Epic 3 ATDD subset (incremental CI gate)",
    "epic4_atdd: Epic 4 ATDD subset (incremental CI gate)",
    "epic5_atdd: Epic 5 ATDD subset (incremental CI gate)",
    "epic6_atdd: Epic 6 ATDD subset (incremental CI gate)",
    "epic7_atdd: Epic 7 ATDD subset (incremental CI gate)",
    "epic8_atdd: Epic 8 ATDD subset (incremental CI gate)",
]
asyncio_mode = "auto"
